[build-system]
requires = [
    "setuptools<64",
]
build-backend = "setuptools.build_meta"

[tool.black]
include = '\.pyi?$'
extend-exclude = '''
/(
| ^/xinference/(_version.py)
| thirdparty
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.cibuildwheel]
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*"]
skip = "pp* *musllinux* *i686 cp36* cp310-win32 cp311-win32"
manylinux-x86_64-image = "manylinux2014"
