[build-system]
requires = [
    "setuptools>=64; python_version<'3.12'",
    "setuptools>=75; python_version>='3.12'"
]
build-backend = "setuptools.build_meta"

[tool.black]
include = '\.pyi?$'
extend-exclude = '''
/(
| ^/xinference/(_version.py)
| thirdparty
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]
skip = "pp* *musllinux* *i686 cp36* cp39-win32 cp310-win32 cp311-win32 cp312-win32"
manylinux-x86_64-image = "manylinux2014"
